fix session modal list hidden on mobile

--- a/src/modules/scheduling/css/attendanceList.scss
+++ b/src/modules/scheduling/css/attendanceList.scss
@@ -213,15 +213,15 @@
         padding: 5px 35px 10px 35px;
     }
     .attendance-list div.customer-list ul{
-        height: calc(100vh - 320px);
+        height: calc(100vh - 330px);
             &.short-list{
-                height: calc(100vh - 355px);
+                height: calc(100vh - 365px);
             }
     }
     .attendance-list {
         padding: 0px 10px;
         .student-list {
-              height: calc(100vh - 320px);
+              height: calc(100vh - 330px);
             .student-details{
                 .item-title{
                     line-height: 21px;
